Update JUnit to 5.13.4